<resources>
    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">By joining you agree to our <a href="www.wolox.com.ar">Terms &amp; Conditions</a></string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_email">Enter your email</string>
    <string name="fragment_example_password">Enter your password</string>
    <string name="fragment_example_sign_in">Sing in</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>
    <string name="fragment_example_username">tvEmail</string>
    <string name="fragmente_example_singup">Sing up</string>
    <string name="fragment_example_email_password_empty_field">Email and password are required</string>
    <string name="fragment_example_email_empty_field">Email is required</string>
    <string name="fragment_example_password_empty_field">Password is required</string>
    <string name="fragment_example_password_invalid">Email is invalid</string>
    <string name="request_error_validation">Invalid login credentials. Please try again.</string>
    <string name="default_error">Whoops something went wrong</string>
    <string name="submit">Submit</string>
    <string name="fragment_viewpager_title">Wolox</string>
    <string name="fragment_viewpager_snackbar_test">Here\'s a Snackbar</string>
    <string name="fragment_viewpager_tab_news">NEWS</string>
    <string name="fragment_viewpager_tab_profile">PROFILE</string>
    <string name="fragment_random_recyclerview_array_test_pos_0">green</string>
    <string name="fragment_random_recyclerview_array_test_pos_1">red</string>
    <string name="fragment_random_recyclerview_array_test_pos_2">blue</string>
    <string name="card_card_img_description">CardImg</string>
    <string name="fragment_viewpager_card_createdtime_demo">15seg</string>
    <string name="k_extra_news">Key_News</string>
    <string name="iv_cover_fragment_news">iv_cover_fragment_news</string>
    <string name="news_image_demo">news image demo</string>
    <string name="news_faketoolbar_title">Post</string>
    <string name="fragment_news_back_arrow">fragment_news-back_arrow</string>
    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>
    <string name="channel_description">general</string>


</resources>