<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/login_cover"
				android:adjustViewBounds="true"
				android:scaleType="centerCrop"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/wolox_logo_large"
				android:layout_marginTop="@dimen/static_spacing_extra_largest"
				android:layout_gravity="bottom|center"/>
		</FrameLayout>

		<EditText
			android:id="@+id/etEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/static_spacing_largest"
			android:layout_marginLeft="@dimen/spacing_large_extra"
			android:layout_marginRight="@dimen/spacing_large_extra"
			android:gravity="center"
			android:hint="@string/fragment_example_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/etPassword"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed" />

		<EditText
			android:id="@+id/etPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/spacing_large_extra"
			android:layout_marginTop="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_large_extra"
			android:gravity="center"
			android:hint="@string/fragment_example_password"
			android:inputType="textPassword"
			android:maxLines="1"
			app:layout_constraintBottom_toTopOf="@id/loginButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/etEmail" />

		<Button
			android:id="@+id/loginButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/fragment_example_sign_in"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@id/etPassword"
			app:layout_constraintStart_toStartOf="@id/etPassword"
			app:layout_constraintTop_toBottomOf="@id/etPassword" />

		<Button
			android:id="@+id/singPpButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/fragmente_example_singup"
			android:backgroundTint="@color/colorPrimary"
			android:layout_marginTop="@dimen/spacing_medium"
			app:layout_constraintEnd_toEndOf="@id/loginButton"
			app:layout_constraintStart_toStartOf="@id/loginButton"
			app:layout_constraintTop_toBottomOf="@id/loginButton" />

		<ProgressBar
			android:id="@+id/pbLoading"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:indeterminateTint="@color/colorPrimary"
			android:layout_marginTop="@dimen/spacing_medium"
			android:visibility="invisible"
			app:layout_constraintEnd_toEndOf="@id/singPpButton"
			app:layout_constraintStart_toStartOf="@id/singPpButton"
			app:layout_constraintTop_toBottomOf="@id/singPpButton" />


		<TextView
			android:id="@+id/woloxLink"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="bottom|center_horizontal"
			android:text="@string/example_wolox"
			android:textSize="@dimen/font_medium_extra"
			android:textColorLink="@color/colorPrimary"
			android:layout_marginBottom="@dimen/static_spacing_medium_extra"
			app:layout_constraintTop_toBottomOf="@+id/pbLoading"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintVertical_bias="1"
			app:layout_constraintVertical_chainStyle="packed" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>