<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh_news_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fragment_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tv_image_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/news_image_demo"
                        android:layout_marginTop="@dimen/static_spacing_small"
                        android:layout_marginHorizontal="@dimen/static_spacing_small"
                        android:src="@drawable/wolox_logo_large"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayoutMain2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/static_spacing_big"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="start"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageButton
                            android:id="@+id/btn_back_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:background="@null"
                            android:contentDescription="@string/fragment_news_back_arrow"
                            android:src="@drawable/ic_back" />

                        <TextView
                            android:id="@+id/tv_toolbar_news"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@string/news_faketoolbar_title"
                            android:textSize="@dimen/font_large"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/etNewsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/font_medium"
                    android:layout_marginTop="@dimen/font_large"
                    android:textSize="@dimen/font_large_extra"
                    android:textStyle="bold"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/etNewsDescripction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/font_medium"
                    android:layout_marginTop="@dimen/font_large"
                    android:textSize="@dimen/font_large_extra"
                    tools:text="Description" />

                <Button
                    android:id="@+id/Button_News_CardFav"
                    android:layout_width="@dimen/spacing_big_extra"
                    android:layout_height="@dimen/spacing_big_extra"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/static_spacing_largest_extra"
                    android:background="@drawable/like_button_selector" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>